fix: country flag emojis not showing on windows

--- a/src/components/AutoComplete/AutoComplete.module.scss
+++ b/src/components/AutoComplete/AutoComplete.module.scss
@@ -52,5 +52,5 @@
 
 .flag {
   margin-right: 0.5rem;
-  font-size: var(--step-1);
+  font-size: var(--step-0);
 }
