--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -144,9 +144,6 @@
   left: 0;
   right: 0;
   justify-content: unset;
-  overflow-y: scroll;
-  overflow-x: scroll;
-  scrollbar-color: transparent;
   padding: 1rem;
 
   .listItem,
